# 2023_12_JUMP_data_only_vignettes

./: .gitignore  .nojekyll  _quarto.yml  cite.html  cite.ipynb  cite.md  default.nix  default.nix.bak  flake.nix  index.html  index.ipynb  index.md  postBuild  pyproject.toml  readme.html  readme.ipynb  readme.md  readme.org  readme.out.ipynb  requirements.txt  robots.txt  search.json  shell.nix  sitemap.xml
.github/workflows/: build_website.yml
2021_03_11_MolecularGlue_AmitChoudharyLab/analysis/: 0.create-experiment-metadata.html  1.visualize-platemap.html  2.calculate-percent-replicating.html  3.calculate-control-percent-replicating.html  4.representations-and-correlations.html  5.create-gct-with-replicate-correlation.html
2021_04_26_MOA_PRISM/analysis/: 1.visualize-platemap.html  2.calculate-percent-replicating.html  3.write-consensus-gct.html  (+2 more)
bak/: pyproject.toml
colab/: 0_howto.ipynb  1_retrieve_profiles.ipynb  2_add_metadata.ipynb  3_calculate_activity.ipynb  4_display_perturbation_images.ipynb  5_explore_distance_clusters.ipynb  6_query_genes_externally.ipynb
docs/: index.html
explanations/: FAQ.html  FAQ.ipynb  FAQ.md  FAQ.out.ipynb  Resources.html  Resources.ipynb  Resources.md  Resources.out.ipynb  data_description.html  data_description.ipynb  data_description.md  glossary.html  glossary.ipynb  glossary.md  quirks_details.html  quirks_details.ipynb  quirks_details.md
howto/: 0_howto.html  0_howto.ipynb  0_howto.md  0_live_coding.html  0_live_coding.ipynb  0_live_coding.md  1_retrieve_profiles.html  1_retrieve_profiles.ipynb  1_tutorial_basic.html  1_tutorial_basic.ipynb  2_add_metadata.html  2_add_metadata.ipynb  3_calculate_activity.html  3_calculate_activity.ipynb  3_calculate_consistency.html  3_calculate_consistency.ipynb  4_display_perturbation_images.html  4_display_perturbation_images.ipynb  5_explore_distance_clusters.html  5_explore_distance_clusters.ipynb  6_query_genes_externally.html  6_query_genes_externally.ipynb  add_metadata.html  add_metadata.ipynb  display_perturbation_images.html  display_perturbation_images.ipynb  interpretable.html  interpretable.ipynb  tmp.html  tmp.ipynb  tutorial_basic.html  tutorial_basic.ipynb
jump_examples/: pyproject.toml
notebooks/: display_orf_images.html  display_orf_images.ipynb  display_orf_images.out.ipynb
pills/: README.md  pyproject.toml
reference/: computational_pipelines.html  computational_pipelines.ipynb  computational_pipelines.md  glossary.html  glossary.ipynb  glossary.md  interactive_tools.html  interactive_tools.ipynb  interactive_tools.md
scripts/: 1_retrieve_profiles.py  1_tutorial_basic.py  2_add_metadata.py  3_calculate_activity.py  3_calculate_consistency.py  4_display_perturbation_images.py  5_explore_distance_clusters.py  6_query_genes_externally.py  add_metadata.py  display_perturbation_images.py  story_draft_1_alan.py  story_draft_2_alan.py  tutorial_basic.py  utils.py
tools/: deploy.sh  insert_colab_cell.py
wip/: research_1.org  story_draft_1_alan.py  story_draft_2_alan.py
(+34 files in other folders)
