[tool.poetry]
name = "pills"
version = "0.0.0"
description = "Examples that show how to interact with JUMP data"
authors = ["Alan Munoz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = ">=1.33.1"
matplotlib = "^3.8.2"
polars = "^0.19.19"
pyarrow = ">=15.0.0"
s3fs = "^2023.12.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupytext = "^1.15.0"
pytest = "^7.4.1"
# ruff-lsp = "^0.0.48" # These two are causing nix2poetry to fail
# ruff = "<0.2.0"

[tool.jupytext.formats]
"pills/tutorials/" = ".ipynb"
"pills/tutorials/" = ".qmd"
"pills/scripts/" = "py:percent"
