[project.urls]
Homepage = "https://github.com/broadinstitute/"

[tool.poetry]
name = "jump_deps"
version = "0.0.7"
description = "Convenience package to add dependencies for JUMP exploratory analysis"
authors = ["Alan Munoz"]
readme = "readme.md"
packages = [{include = "jump_deps"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
boto3 = "==1.34.131"
matplotlib = "^3.8.2"
polars = "^1.5.0"
pyarrow = ">=15.0.0"
s3fs = ">=2023.12.1"
seaborn = "^0.13.2"
biopython = "^1.84"
broad-babel = ">=0.1.26"
ipdb = "^0.13.13"
copairs = "^0.4.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupytext = "^1.15.0"
pytest = "^7.4.1"
ruff-lsp = "^0.0.48" # These two are causing nix2poetry to fail
ruff = "<0.2.0"

[tool.jupytext.formats]
"howto/" = ".qmd"
"scripts/" = "py:percent"
