[tool.poetry]
name = "jump_stories"
version = "0.1.0"
description = ""
authors = ["Alan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PyYAML = "5.4"
# plotly = "4.14.3"
# dvc-s3 = "^2.23.0"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
scipy = ">=1.8.1"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
broad-babel = "^0.1.9"
copairs = {git = "https://github.com/cytomining/copairs.git", rev = "v0.4.0-alpha"}
numpy = "*"
fastcluster = "^1.2.6"
pandas = "*"
pyarrow = "^14.0.1"
joblib = "^1.3.2"
adbc-driver-sqlite = "^0.8.0"

[tool.poetry.group.dev.dependencies]
jupytext = "^1.15.2"
ipdb = "^0.13.13"
pyflakes = "^3.1.0"
ruff-lsp = "^0.0.48"

[tool.jupytext.formats]
"pills/tutorials/" = ".qmd"
"pills/scripts/" = "py:percent"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
